--- a/views/admin-panel.hbs
+++ b/views/admin-panel.hbs
@@ -265,8 +265,8 @@
                         <label for="product-price-input">Цена:</label>
                         <input name="productText" type="text" id="product-price-input" value="{{productPrice}}">
                         <div class="row form-controls">
-                            <button>OK</button>
-                            <button>Стереть</button>
+                            <button class="btn-pos">OK</button>
+                            <button class="btn-neg">Стереть</button>
                         </div>
                     </form>
                     <h3>Добавить 3d-демо</h3>
