--- a/views/index.hbs
+++ b/views/index.hbs
@@ -13,7 +13,10 @@
             <div class="col logo-container">
                 <div class="logo row">
                     <img src="/img/icons/logo.png" alt="Логотип">
-                    <a href="/">AR-OPTIMA</a>
+                    <div class="col">
+                        <a href="/">AR-OPTIMA</a>
+                        <span>Technology is everywhere</span>
+                    </div>
                 </div>
                 <img class="mobile-banner" src="/img/icons/nft.png" alt="NFT">
                 <div class="banner">
@@ -25,7 +28,12 @@
                     <video preload="auto" autoplay loop="true" muted="muted">
                         <source src="/media/vrandar.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
                     </video>
-                    <p><strong>Дополненная реальность</strong> – одна из многих технологий взаимодействия человека и компьютера. Ее специфика заключается в том, что она программным образом визуально совмещает два изначально независимых пространства: мир реальных объектов вокруг нас и виртуальный мир, воссозданный на компьютере.</p>
+                    <p>
+                        <strong>Дополненная реальность</strong> – одна из многих технологий взаимодействия человека и компьютера.
+                        Ее специфика заключается в том, что она программным образом визуально совмещает два изначально независимых пространства:
+                        мир реальных объектов вокруг нас и виртуальный мир, воссозданный на компьютере.
+                        Цель проекта <b>AR-OPTIMA</b> сделать дополненную реальность доступнее.
+                    </p>
                 </div>
                 <div id="who-we-are" class="col info-part content-part">
                     <h2>Кто мы такие?</h2>
