--- a/views/partials/headerLight.hbs
+++ b/views/partials/headerLight.hbs
@@ -2,7 +2,11 @@
     <div class="col logo-container">
         <div class="logo row">
             <img src="/img/icons/logo.png" alt="Логотип">
-            <a class="col" href="/">AR-OPTIMA</a>
+            <div class="col">
+                <a class="col" href="/">AR-OPTIMA</a>
+                <span>Technology is everywhere</span>
+            </div>
+
         </div>
     </div>
     {{>modalToggler}}
