--- a/public/scss/_media.scss
+++ b/public/scss/_media.scss
@@ -1,3 +1,13 @@
+@media screen and (max-width: 1460px){
+  .header{
+    .logo-container{
+      .banner{
+        margin-bottom: 120px;
+      }
+    }
+  }
+}
+
 
 @media screen and (max-width: 1025px){
   .wrapper{
@@ -14,11 +24,16 @@
       grid-column: 1/6;
       .banner{
         font-size: 2.0em;
-        margin-bottom: 50px;
+        margin-bottom: 100px;
       }
     }
     .info-container{
       grid-column: 6/13;
+      #what-is-it{
+        p{
+          padding: 5px;
+        }
+      }
     }
     .info-nav-container{
       display: none;
