--- a/public/scss/_vars.scss
+++ b/public/scss/_vars.scss
@@ -1,7 +1,7 @@
 $primary-col: #415167;
 $primary-blue-col:#123C69;
 $primary-red-col:#AC3B61;
-$accent-brown-col: #EDC7B7;
+$accent-brown-col: #edc7b7;
 $accent-white-col: #EEE2DC;
 $light-gray-col: #BAB2B5;
 
