--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -391,6 +391,8 @@ body{
   .top-container{
     flex-wrap: wrap;
     justify-content: space-evenly;
+    width: 100%;
+    max-width: 1600px;
     .top-product{
       @include card();
       @include volumeShadow(lightgrey);
