--- a/views/products.hbs
+++ b/views/products.hbs
@@ -7,8 +7,48 @@
 </head>
 <body>
     {{>modalMenu}}
-    <div class="wrapper wrapper-main">
+    <div class="wrapper wrapper-main wrapper-main-with-transparent">
         {{>headerLight}}
+        <div class="transparent-banner col">
+            <h2>Наше предложение</h2>
+            <p class="transparent-banner-description">
+                Ниже Вы можете ознакомиться с предложением проекта "AR-OPTIMA". Здесь перечислены работы наших сотрудинков. Если вам приглянулось что-либо,
+                то можете смело добавлять к себе любые товары из этого списка. Позже, наш менеджер свяжется с Вами по электронной почте для обсуждения
+                деталей. После оплаты, купленный товар исчезнет из списка ниже. Также, на почту, вам будет отправлена информация по вашей покупке и NFT-токен.
+                <br>
+                Почему именно наша площадка?
+            </p>
+            <div class="row">
+                <div class="col transparent-block col">
+                    <img src="/img/icons/speed.png" alt="Блок 1">
+                    <h4>Оперативность</h4>
+                    <p>
+                        Наверняка, каждыому из нас в жизни хотя бы раз приходилось сталкиваться с компаниями и людьми, которые просрачивали все поставленные дедлайны,
+                        в результате чего ожидание расстягивалось на долго и мучительно. Не очень то приятная ситуация... Но не спешите паниковать, команда "AR-OPTIMA"
+                        славится своей оперативностью и пунктуальностью.
+                    </p>
+                </div>
+                <div class="col transparent-block col">
+                    <img src="/img/icons/trust.png" alt="Блок 2">
+                    <h4>Доверие</h4>
+                    <p>
+                        Так как технология NFT пока что не имеет под собой юридической базы, многие площадки, злоупотребляя нашим доверием, пытаются провернуть различные
+                        спекулятивные махинации. Мы же считаем, что эта технология обладает огромным потенциалом и не хотим, чтобы она ассоциировалась с мошенниками.
+                        Так что можете быть спокойны, мы Вас не обманем.
+                    </p>
+                </div>
+                <div class="col transparent-block col">
+                    <img src="/img/icons/accessibility.png" alt="Блок 3">
+                    <h4>Доступность</h4>
+                    <p>
+                        NFT по своей сути является лишь одним из видов криптографических токенов. Для многих людей эта технология до сих пор остаётся непонятной и сложной.
+                        Но тут как раз появляемы мы, команда "AR-OPTIMA". Мы готовы помогать вам с любыми возникшими трудностями и вопросами на любом этапе.
+                        Так что не пугайтесь!.
+                    </p>
+                </div>
+            </div>
+
+        </div>
         <main class="main">
             <div class="all-products col">
                 <h3>Произведения известных авторов:</h3>
