--- a/views/teammates.hbs
+++ b/views/teammates.hbs
@@ -7,8 +7,44 @@
 </head>
 <body>
     {{>modalMenu}}
-    <div class="wrapper wrapper-main">
+    <div class="wrapper wrapper-main wrapper-main-with-transparent">
         {{>headerLight}}
+        <div class="transparent-banner col">
+            <h2>Наша команда</h2>
+            <p class="transparent-banner-description">
+                Ниже Вы можете ознакомиться со списком наших сотрудников. Кто-то работает у нас на постоянной основе, кто-то в качестве подрядчика.
+                Но разве это важно? Мы очень ответсвенно подходим к поиску и привлечению новых людей к работе, поэтому, Вы можете быть спокойны за
+                свой заказ, каким бы сложным и комлпексным он ни был. <br>
+                Но что же имеенно объединяет все людей ниже? Какими качествами нужно обладать, чтобы попасть к нам в команду?
+            </p>
+            <div class="row">
+                <div class="col transparent-block col">
+                    <img src="/img/icons/responsibility.png" alt="Блок 1">
+                    <h4>Ответственность</h4>
+                    <p>
+                        Это первое и самое важное качество. Способ конечной реализации того или иного заказа определяется непосредственно его исполнителем.
+                        Именно поэтому очень важно уметь брать на себя ответсвенность и доводить проект до логического завершения!
+                    </p>
+                </div>
+                <div class="col transparent-block col">
+                    <img src="/img/icons/conversation.png" alt="Блок 2">
+                    <h4>Коммуникабельность</h4>
+                    <p>
+                        Не многие знают, но работа программиста предполагает постоянное общение как с заказчиками, так и с членами команды. Можно быть отличным
+                        техническим специалистом, но без умения находить общий язык не получится стать высококлассным разработчиком.
+                    </p>
+                </div>
+                <div class="col transparent-block col">
+                    <img src="/img/icons/education.png" alt="Блок 3">
+                    <h4>Обучаемость</h4>
+                    <p>
+                        Ещё одно немаловажное качество - это обучаемость. Работа программиста предполагает постоянное обучние и развитие. Так происходит, потому что
+                        технологии не стоят не месте и идут вперёд семимильными шагами. Если этим принебрегать, то очень скоро можно остаться на "задворках" профессии.
+                    </p>
+                </div>
+            </div>
+            <a class="transparent-banner-link" href="mailto:ar.optima@mail.ru">Ты считаешь, что подходишь нам? Тогда пиши нам на почту</a>
+        </div>
         <main class="main">
             <div class="all-employers col">
                 <h3>Главные разработчики:</h3>
