--- a/public/scss/_mixins.scss
+++ b/public/scss/_mixins.scss
@@ -237,7 +237,7 @@
 }
 
 @mixin comment(){
-  height: 100px;
+  height: 110px;
   border: 4px solid $primary-col;
   margin: 7px 0;
   .comment-user{
@@ -246,6 +246,7 @@
     align-items: center;
     .comment-user-avatar{
       height: 100px;
+      padding: 10px;
       width:100px;
     }
     .comment-user-login{
